--- a/docs/overrides/partials/section-overview.html
+++ b/docs/overrides/partials/section-overview.html
@@ -1,4 +1,2 @@
-{% for item in section_items(page, navigation, config) %}
-## [{{ item.title }}]({{ item.url }})
-{{ item.meta.description or '' }}
-{% endfor %}
+{% for item in section_items(page, navigation, config) %} ## [{{ item.title
+}}]({{ item.url }}) {{ item.meta.description or '' }} {% endfor %}
